src/style.css
html {
  padding: 5px 5px 5px 5px;
  margin: 0;
  height: 0;
}

body {
  width: 300px;
  height: 0;
}

input {
  display: block;
  width: 100%;
}

ul {
  list-style: none;
  padding: 0px;
  margin: 5px 0 5px 0;
}

li {
  transition: .2s;
  padding: 5px;
  vertical-align: middle;
  height: 18px;
  border-bottom: solid 1px #f3f3f3;
}

li:hover {
  background-color: #eee;
}

strong {
  display: inline-block;
  min-width: 35%;
  font-family: arial;
  color: #333;
  white-space: no-wrap;
}

span {
  color: #555;
}

